--- a/frontend/src/app/views/main-page/main-page.component.html
+++ b/frontend/src/app/views/main-page/main-page.component.html
@@ -12,40 +12,52 @@
       <tbody>
       <tr>
         <td>1 stars</td>
-        <td><span class="material-icons">star_rate</span></td>
+        <td>
+          <span class="material-icons">star</span>
+          <span class="material-icons">star_outline</span>
+          <span class="material-icons">star_outline</span>
+          <span class="material-icons">star_outline</span>
+          <span class="material-icons">star_outline</span>
+        </td>
         <td>[count books by this rating]</td>
       </tr>
       <tr>
         <td>2 stars</td>
-        <td><span class="material-icons">star_rate</span>
-          <span class="material-icons">star_rate</span>
+        <td><span class="material-icons">star</span>
+          <span class="material-icons">star</span>
+          <span class="material-icons">star_outline</span>
+          <span class="material-icons">star_outline</span>
+          <span class="material-icons">star_outline</span>
         </td>
         <td>[count books by this rating]</td>
       </tr>
       <tr>
         <td>3 stars</td>
-        <td><span class="material-icons">star_rate</span>
-          <span class="material-icons">star_rate</span>
-          <span class="material-icons">star_rate</span>
+        <td><span class="material-icons">star</span>
+          <span class="material-icons">star</span>
+          <span class="material-icons">star</span>
+          <span class="material-icons">star_outline</span>
+          <span class="material-icons">star_outline</span>
         </td>
         <td>[count books by this rating]</td>
       </tr>
       <tr>
         <td>4 stars</td>
-        <td><span class="material-icons">star_rate</span>
-          <span class="material-icons">star_rate</span>
-          <span class="material-icons">star_rate</span>
-          <span class="material-icons">star_rate</span>
+        <td><span class="material-icons">star</span>
+          <span class="material-icons">star</span>
+          <span class="material-icons">star</span>
+          <span class="material-icons">star</span>
+          <span class="material-icons">star_outline</span>
         </td>
         <td>[count books by this rating]</td>
       </tr>
       <tr>
         <td>5 stars</td>
-        <td><span class="material-icons">star_rate</span>
-          <span class="material-icons">star_rate</span>
-          <span class="material-icons">star_rate</span>
-          <span class="material-icons">star_rate</span>
-          <span class="material-icons">star_rate</span>
+        <td><span class="material-icons">star</span>
+          <span class="material-icons">star</span>
+          <span class="material-icons">star</span>
+          <span class="material-icons">star</span>
+          <span class="material-icons">star</span>
         </td>
         <td>[count books by this rating]</td>
       </tr>
